[package]
name = "rvm"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vmx"]
vmx = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "1.3"
bit_field = "0.10"
numeric-enum-macro = "0.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
raw-cpuid = "10.6"
